src/components/SideBar/SideBar.module.scss
@use '../../styles/mixins' as m;
@import '../../styles/variables.scss';

.sideBar {
  grid-column: 1 / 2;
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: 1rem;
  gap: 1rem;
  background-color: $background-color-2;
  padding-left: 1rem;

  @include m.breakpoint-max('sm') {
    grid-column: 1 / 4;
    margin: 0;
    padding: 0;
  }

  &__heading {
    align-self: flex-start;
    font-size: 1.5rem;
    font-weight: 700;
    color: $text-color;
    padding-left: 1.5rem;
    padding-bottom: 0.7rem;
    border-bottom: 1px solid $dark-color;
    width: 100%;

    @include m.breakpoint-max('md') {
      display: none;
    }
  }

  &__list {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 1rem;
    width: 100%;
    list-style: none;
    padding: 1rem;
    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);

    @include m.breakpoint-max('md') {
      flex-direction: row;
      overflow-x: auto;
      white-space: nowrap;

      &::-webkit-scrollbar {
        width: 8px;
      }
      &::-webkit-scrollbar-track {
        background-color: $background-color-2;
      }
      &::-webkit-scrollbar-thumb {
        background-color: $dark-color;
        border-radius: 4px;
      }
      &::-webkit-scrollbar-thumb:hover {
        background-color: $darker-hover-color;
      }
    }

    &:first-child {
      border-top: 1px solid $dark-color;

      @include m.breakpoint-max('md') {
        border-top: none;
      }
    }

    & li {
      width: 100%;
      display: flex;
      align-items: center;
      justify-content: left;
      gap: 1rem;
      padding: 0.5rem;
      cursor: pointer;
      transition: background-color 0.3s;

      & a {
        display: flex;
        align-items: center;
        gap: 0.5rem;
        padding: 0.7rem;
        border-radius: 1rem;
        width: 100%;
        border-left: 0.25rem solid transparent;

        &:hover {
          background-color: $darker-hover-color;
          color: #fff;
        }

        &.active {
          border-left: 0.1rem solid $primary-color;
          background-color: $darker-hover-color;
          color: #fff;
        }

        & img {
          width: 2.5rem;
          height: 2.5rem;
          border: 3px solid $primary-color;
          border-radius: 50%;
        }
      }
    }
  }
}

